attempt 1: fix header spacing on iOS

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -3,6 +3,7 @@ html, body {
   margin: 0;
   width: 100vw;
   height: 100vh;
+  font-kerning: none;
   font-family: "Inter";
   position: relative;
   overflow: hidden;
